--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -5,7 +5,7 @@
    "id": "c203f34f-57d0-4a10-af27-562bd064caf8",
    "metadata": {},
    "source": [
-    "## Assignment 1: By Mustafa Ahmed (Assignment 2 keep scrolling)"
+    "## Project by Mustafa Ahmed"
    ]
   },
   {
@@ -881,7 +881,7 @@
    "id": "44eb1f37-c6a9-4b34-bfbc-794f9ca7f857",
    "metadata": {},
    "source": [
-    "## Assignment 2: By Mustafa Ahmed"
+    "## Project Continued"
    ]
   },
   {
